--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
-matplotlib==3.7.1
-seaborn==0.12.2
-scipy==1.10.1
-plotly==5.15.0
-openpyxl==3.1.2
+streamlit
+pandas
+numpy
+matplotlib
+seaborn
+scipy
+plotly
+openpyxl
