--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-scipy
-plotly
-openpyxl
-distutils
+streamlit==1.32.0
+pandas==2.1.4
+numpy==1.26.2
+matplotlib==3.8.2
+seaborn==0.13.0
+scipy==1.11.4
+statsmodels==0.14.0
+openpyxl==3.1.2
